--- a/substack/articles/2026.01.13-MD_Hybrid/scratchpad.ipynb
+++ b/substack/articles/2026.01.13-MD_Hybrid/scratchpad.ipynb
@@ -365,6 +365,144 @@
     "\"\"\").show()\n",
     "cn.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e0d291f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌───────────────────────────┐\n",
+      "│    DOWNLOAD_SOURCE (L)    │\n",
+      "│    ────────────────────   │\n",
+      "│          md_type:         │\n",
+      "│      DOWNLOAD_SOURCE      │\n",
+      "│                           │\n",
+      "│        bridge_id: 1       │\n",
+      "└─────────────┬─────────────┘\n",
+      "┌─────────────┴─────────────┐\n",
+      "│     DOWNLOAD_SINK (R)     │\n",
+      "│    ────────────────────   │\n",
+      "│          md_type:         │\n",
+      "│       DOWNLOAD_SINK       │\n",
+      "│                           │\n",
+      "│        bridge_id: 1       │\n",
+      "│      parallel: false      │\n",
+      "└─────────────┬─────────────┘\n",
+      "┌─────────────┴─────────────┐\n",
+      "│ BATCH_CREATE_TABLE_AS (R) │\n",
+      "└─────────────┬─────────────┘\n",
+      "┌─────────────┴─────────────┐\n",
+      "│     UPLOAD_SOURCE (R)     │\n",
+      "│    ────────────────────   │\n",
+      "│          md_type:         │\n",
+      "│       UPLOAD_SOURCE       │\n",
+      "│                           │\n",
+      "│        bridge_id: 2       │\n",
+      "└─────────────┬─────────────┘\n",
+      "┌─────────────┴─────────────┐\n",
+      "│      UPLOAD_SINK (L)      │\n",
+      "│    ────────────────────   │\n",
+      "│    md_type: UPLOAD_SINK   │\n",
+      "│        bridge_id: 2       │\n",
+      "│       parallel: true      │\n",
+      "└─────────────┬─────────────┘\n",
+      "┌─────────────┴─────────────┐\n",
+      "│     HASH_GROUP_BY (L)     │\n",
+      "│    ────────────────────   │\n",
+      "│          Groups:          │\n",
+      "│             #0            │\n",
+      "│             #1            │\n",
+      "│                           │\n",
+      "│    Aggregates: sum(#2)    │\n",
+      "│                           │\n",
+      "│     ~480,904,511 rows     │\n",
+      "└─────────────┬─────────────┘\n",
+      "┌─────────────┴─────────────┐\n",
+      "│       PROJECTION (L)      │\n",
+      "│    ────────────────────   │\n",
+      "│          channel          │\n",
+      "│          location         │\n",
+      "│            qty            │\n",
+      "│                           │\n",
+      "│     ~480,904,519 rows     │\n",
+      "└─────────────┬─────────────┘\n",
+      "┌─────────────┴─────────────┐\n",
+      "│       HASH_JOIN (L)       │\n",
+      "│    ────────────────────   │\n",
+      "│      Join Type: INNER     │\n",
+      "│   Conditions: sku = sku   ├───────────────────────────────────────────┐\n",
+      "│                           │                                           │\n",
+      "│     ~480,904,519 rows     │                                           │\n",
+      "└─────────────┬─────────────┘                                           │\n",
+      "┌─────────────┴─────────────┐                             ┌─────────────┴─────────────┐\n",
+      "│       HASH_JOIN (L)       │                             │    DOWNLOAD_SOURCE (L)    │\n",
+      "│    ────────────────────   │                             │    ────────────────────   │\n",
+      "│      Join Type: INNER     │                             │          md_type:         │\n",
+      "│                           │                             │      DOWNLOAD_SOURCE      │\n",
+      "│        Conditions:        ├──────────────┐              │                           │\n",
+      "│    order_id = order_id    │              │              │        bridge_id: 3       │\n",
+      "│                           │              │              │                           │\n",
+      "│     ~479,988,380 rows     │              │              │                           │\n",
+      "└─────────────┬─────────────┘              │              └─────────────┬─────────────┘\n",
+      "┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐\n",
+      "│     READ_CSV_AUTO  (L)    ││     READ_CSV_AUTO  (L)    ││  BATCH_DOWNLOAD_SINK (R)  │\n",
+      "│    ────────────────────   ││    ────────────────────   ││    ────────────────────   │\n",
+      "│           LOCAL           ││           LOCAL           ││          md_type:         │\n",
+      "│                           ││                           ││    BATCH_DOWNLOAD_SINK    │\n",
+      "│        Projections:       ││        Projections:       ││                           │\n",
+      "│          order_id         ││          order_id         ││        bridge_id: 3       │\n",
+      "│            sku            ││          channel          ││       parallel: true      │\n",
+      "│            qty            ││                           ││                           │\n",
+      "│                           ││                           ││                           │\n",
+      "│     ~479,988,380 rows     ││     ~124,452,210 rows     ││                           │\n",
+      "└───────────────────────────┘└───────────────────────────┘└─────────────┬─────────────┘\n",
+      "                                                          ┌─────────────┴─────────────┐\n",
+      "                                                          │       SEQ_SCAN  (R)       │\n",
+      "                                                          │    ────────────────────   │\n",
+      "                                                          │      Table: inventory     │\n",
+      "                                                          │   Type: Sequential Scan   │\n",
+      "                                                          │                           │\n",
+      "                                                          │        Projections:       │\n",
+      "                                                          │            sku            │\n",
+      "                                                          │          location         │\n",
+      "                                                          │                           │\n",
+      "                                                          │      ~9,935,783 rows      │\n",
+      "                                                          └───────────────────────────┘\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import duckdb\n",
+    "db_name = \"duckland\"\n",
+    "\n",
+    "cn = duckdb.connect(f'md:{db_name}?motherduck_token={os.getenv(\"MD_TOKEN\")}')\n",
+    "cn.execute(\"attach '~/test_dbs/duckland_local.db' as local_db\")\n",
+    "\n",
+    "sql = f\"\"\"\n",
+    "    EXPLAIN\n",
+    "    create or replace table duckland.main.channel_loc_qty\n",
+    "    as\n",
+    "    select oh.channel\n",
+    "        , iv.location\n",
+    "        , sum(od.qty) as tot_qty\n",
+    "    from local_db.v_order_header oh\n",
+    "        join local_db.v_order_detail as od \n",
+    "            on oh.order_id = od.order_id\n",
+    "        join duckland.main.inventory as iv \n",
+    "            on od.sku = iv.sku\n",
+    "    group by all\n",
+    "\"\"\"\n",
+    "res = cn.execute(sql)\n",
+    "plan_text = res.fetchall()[0][1]\n",
+    "print(plan_text)"
+   ]
   }
  ],
  "metadata": {
