--- a/substack/articles/2026.01.03 - c2_semantic/scratchpad.ipynb
+++ b/substack/articles/2026.01.03 - c2_semantic/scratchpad.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "e79eb42a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<_duckdb.DuckDBPyConnection at 0x10c71b5f0>"
+       "<_duckdb.DuckDBPyConnection at 0x108aa6430>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "db5f36ba",
    "metadata": {},
    "outputs": [
@@ -65,35 +65,35 @@
        "│ stroke_number │ total_time │ total_distance │  pace  │ Watts │ stroke_rate │ season_year │ workout_date │ machine_type │ total_time_mm_ss │ pace_mm_ss_ff │  log_id   │\n",
        "│     int64     │   double   │     double     │ double │ int64 │    int64    │    int64    │     date     │   varchar    │     varchar      │    varchar    │   int64   │\n",
        "├───────────────┼────────────┼────────────────┼────────┼───────┼─────────────┼─────────────┼──────────────┼──────────────┼──────────────────┼───────────────┼───────────┤\n",
-       "│             1 │        0.3 │            1.0 │    0.0 │  NULL │        NULL │        2026 │ 2025-12-23   │ rowerg       │ 00:00            │ 0:00.00       │ 110190940 │\n",
-       "│             2 │        2.3 │            8.5 │  151.0 │   102 │        NULL │        2026 │ 2025-12-23   │ rowerg       │ 02:31            │ 2:31.00       │ 110190940 │\n",
-       "│             3 │        4.3 │           16.6 │  132.2 │   151 │          27 │        2026 │ 2025-12-23   │ rowerg       │ 02:12            │ 2:12.20       │ 110190940 │\n",
-       "│             4 │        7.3 │           29.2 │  119.0 │   208 │          27 │        2026 │ 2025-12-23   │ rowerg       │ 01:59            │ 1:59.00       │ 110190940 │\n",
-       "│             5 │        9.3 │           37.6 │  119.0 │   208 │          27 │        2026 │ 2025-12-23   │ rowerg       │ 01:59            │ 1:59.00       │ 110190940 │\n",
-       "│             6 │       11.3 │           46.0 │  118.5 │   210 │          27 │        2026 │ 2025-12-23   │ rowerg       │ 01:59            │ 1:58.50       │ 110190940 │\n",
-       "│             7 │       13.3 │           54.6 │  118.6 │   210 │          26 │        2026 │ 2025-12-23   │ rowerg       │ 01:59            │ 1:58.60       │ 110190940 │\n",
-       "│             8 │       16.3 │           67.3 │  118.3 │   211 │          27 │        2026 │ 2025-12-23   │ rowerg       │ 01:58            │ 1:58.30       │ 110190940 │\n",
-       "│             9 │       18.3 │           75.7 │  118.1 │   212 │          26 │        2026 │ 2025-12-23   │ rowerg       │ 01:58            │ 1:58.10       │ 110190940 │\n",
-       "│            10 │       21.3 │           88.5 │  119.3 │   206 │          25 │        2026 │ 2025-12-23   │ rowerg       │ 01:59            │ 1:59.30       │ 110190940 │\n",
+       "│             1 │        0.0 │            0.0 │    0.0 │  NULL │        NULL │        2026 │ 2026-01-19   │ rowerg       │ 00:00            │ 0:00.00       │ 111482135 │\n",
+       "│             2 │        2.9 │           11.6 │  124.0 │   184 │          28 │        2026 │ 2026-01-19   │ rowerg       │ 02:04            │ 2:04.00       │ 111482135 │\n",
+       "│             3 │        4.9 │           19.8 │  124.0 │   184 │          28 │        2026 │ 2026-01-19   │ rowerg       │ 02:04            │ 2:04.00       │ 111482135 │\n",
+       "│             4 │        6.9 │           28.6 │  119.8 │   204 │          26 │        2026 │ 2026-01-19   │ rowerg       │ 02:00            │ 1:59.80       │ 111482135 │\n",
+       "│             5 │        8.9 │           37.8 │  113.4 │   240 │          28 │        2026 │ 2026-01-19   │ rowerg       │ 01:53            │ 1:53.40       │ 111482135 │\n",
+       "│             6 │       10.9 │           47.1 │  109.0 │   270 │          28 │        2026 │ 2026-01-19   │ rowerg       │ 01:49            │ 1:49.00       │ 111482135 │\n",
+       "│             7 │       12.9 │           56.4 │  109.2 │   269 │          27 │        2026 │ 2026-01-19   │ rowerg       │ 01:49            │ 1:49.20       │ 111482135 │\n",
+       "│             8 │       15.9 │           70.3 │  108.0 │   278 │          27 │        2026 │ 2026-01-19   │ rowerg       │ 01:48            │ 1:48.00       │ 111482135 │\n",
+       "│             9 │       17.9 │           79.5 │  107.6 │   281 │          27 │        2026 │ 2026-01-19   │ rowerg       │ 01:48            │ 1:47.60       │ 111482135 │\n",
+       "│            10 │       19.9 │           88.9 │  107.6 │   281 │          27 │        2026 │ 2026-01-19   │ rowerg       │ 01:48            │ 1:47.60       │ 111482135 │\n",
        "│             · │         ·  │             ·  │    ·   │    ·  │           · │          ·  │     ·        │   ·          │   ·              │    ·          │     ·     │\n",
        "│             · │         ·  │             ·  │    ·   │    ·  │           · │          ·  │     ·        │   ·          │   ·              │    ·          │     ·     │\n",
        "│             · │         ·  │             ·  │    ·   │    ·  │           · │          ·  │     ·        │   ·          │   ·              │    ·          │     ·     │\n",
-       "│           472 │      708.6 │         2939.5 │  118.3 │   211 │          40 │        2026 │ 2026-01-09   │ skierg       │ 01:58            │ 1:58.30       │ 110946363 │\n",
-       "│           473 │      710.1 │         2946.1 │  118.8 │   209 │          41 │        2026 │ 2026-01-09   │ skierg       │ 01:59            │ 1:58.80       │ 110946363 │\n",
-       "│           474 │      711.4 │         2951.4 │  118.8 │   209 │          41 │        2026 │ 2026-01-09   │ skierg       │ 01:59            │ 1:58.80       │ 110946363 │\n",
-       "│           475 │      713.0 │         2958.2 │  118.7 │   209 │          41 │        2026 │ 2026-01-09   │ skierg       │ 01:59            │ 1:58.70       │ 110946363 │\n",
-       "│           476 │      714.5 │         2964.7 │  118.3 │   211 │          42 │        2026 │ 2026-01-09   │ skierg       │ 01:58            │ 1:58.30       │ 110946363 │\n",
-       "│           477 │      715.8 │         2970.2 │  118.3 │   211 │          42 │        2026 │ 2026-01-09   │ skierg       │ 01:58            │ 1:58.30       │ 110946363 │\n",
-       "│           478 │      717.3 │         2976.8 │  116.3 │   222 │          42 │        2026 │ 2026-01-09   │ skierg       │ 01:56            │ 1:56.30       │ 110946363 │\n",
-       "│           479 │      718.9 │         2983.4 │  116.2 │   223 │          42 │        2026 │ 2026-01-09   │ skierg       │ 01:56            │ 1:56.20       │ 110946363 │\n",
-       "│           480 │      720.1 │         2988.9 │  116.1 │   224 │          43 │        2026 │ 2026-01-09   │ skierg       │ 01:56            │ 1:56.10       │ 110946363 │\n",
-       "│           481 │      721.7 │         2995.7 │  116.8 │   220 │          42 │        2026 │ 2026-01-09   │ skierg       │ 01:57            │ 1:56.80       │ 110946363 │\n",
+       "│           255 │       88.8 │          398.6 │  110.7 │   258 │          25 │        2026 │ 2026-01-19   │ rowerg       │ 01:51            │ 1:50.70       │ 111482135 │\n",
+       "│           256 │       90.8 │          407.7 │  109.9 │   264 │          26 │        2026 │ 2026-01-19   │ rowerg       │ 01:50            │ 1:49.90       │ 111482135 │\n",
+       "│           257 │       93.8 │          421.8 │  108.3 │   276 │          26 │        2026 │ 2026-01-19   │ rowerg       │ 01:48            │ 1:48.30       │ 111482135 │\n",
+       "│           258 │       95.8 │          430.9 │  108.3 │   276 │          26 │        2026 │ 2026-01-19   │ rowerg       │ 01:48            │ 1:48.30       │ 111482135 │\n",
+       "│           259 │       97.8 │          440.0 │  108.7 │   273 │          26 │        2026 │ 2026-01-19   │ rowerg       │ 01:49            │ 1:48.70       │ 111482135 │\n",
+       "│           260 │      100.8 │          454.2 │  108.0 │   278 │          26 │        2026 │ 2026-01-19   │ rowerg       │ 01:48            │ 1:48.00       │ 111482135 │\n",
+       "│           261 │      102.8 │          463.3 │  108.0 │   278 │          26 │        2026 │ 2026-01-19   │ rowerg       │ 01:48            │ 1:48.00       │ 111482135 │\n",
+       "│           262 │      104.8 │          472.8 │  107.2 │   284 │          26 │        2026 │ 2026-01-19   │ rowerg       │ 01:47            │ 1:47.20       │ 111482135 │\n",
+       "│           263 │      106.8 │          482.3 │  106.3 │   291 │          26 │        2026 │ 2026-01-19   │ rowerg       │ 01:46            │ 1:46.30       │ 111482135 │\n",
+       "│           264 │      109.8 │          496.3 │  107.5 │   282 │          26 │        2026 │ 2026-01-19   │ rowerg       │ 01:48            │ 1:47.50       │ 111482135 │\n",
        "├───────────────┴────────────┴────────────────┴────────┴───────┴─────────────┴─────────────┴──────────────┴──────────────┴──────────────────┴───────────────┴───────────┤\n",
-       "│ 8200 rows (20 shown)                                                                                                                                       12 columns │\n",
+       "│ 264 rows (20 shown)                                                                                                                                        12 columns │\n",
        "└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,10 +101,91 @@
    "source": [
     "sql = \"\"\"\n",
     "    from v_c2_detail\n",
-    "    where workout_date >= '2025-12-23'\n",
+    "    where workout_date >= '2026-01-19'\n",
+    "    and machine_type = 'rowerg'\n",
     "    --limit 50\n",
     "\"\"\"\n",
     "\n",
+    "cn.sql(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "63238382",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────────┬─────────────────────┬──────────────────┬───────────────────────┬─────────────────────┬───────────────────────┬─────────────────────┬───────────────┬───────────────┬─────────────────────┬──────────────┬─────────┬───────────┬──────────┬───────────┬────────────────┬─────────────┬───────┬─────────┬─────────┬─────────┬──────────┬─────────────────────┬────────┐\n",
+       "│  Log ID   │        Date         │   Description    │ Work Time (Formatted) │ Work Time (Seconds) │ Rest Time (Formatted) │ Rest Time (Seconds) │ Work Distance │ Rest Distance │ Stroke Rate/Cadence │ Stroke Count │  Pace   │ Avg Watts │ Cal/Hour │ Total Cal │ Avg Heart Rate │ Drag Factor │  Age  │ Weight  │  Type   │ Ranked  │ Comments │    Date Entered     │ season │\n",
+       "│   int64   │      timestamp      │     varchar      │        varchar        │       double        │        varchar        │        int64        │     int64     │     int64     │        int64        │    int64     │ varchar │   int64   │  int64   │   int64   │     int64      │    int64    │ int64 │ varchar │ varchar │ boolean │ varchar  │      timestamp      │ int64  │\n",
+       "├───────────┼─────────────────────┼──────────────────┼───────────────────────┼─────────────────────┼───────────────────────┼─────────────────────┼───────────────┼───────────────┼─────────────────────┼──────────────┼─────────┼───────────┼──────────┼───────────┼────────────────┼─────────────┼───────┼─────────┼─────────┼─────────┼──────────┼─────────────────────┼────────┤\n",
+       "│ 111482135 │ 2026-01-19 06:11:00 │ 4x500m/1:00r row │ 7:15.2                │               435.2 │ 4:00.0                │                 240 │          2000 │           651 │                  26 │          264 │ 1:48.8  │       272 │     1235 │       150 │              0 │         128 │    40 │ Hwt     │ RowErg  │ false   │ NULL     │ 2026-01-19 11:11:29 │   2026 │\n",
+       "└───────────┴─────────────────────┴──────────────────┴───────────────────────┴─────────────────────┴───────────────────────┴─────────────────────┴───────────────┴───────────────┴─────────────────────┴──────────────┴─────────┴───────────┴──────────┴───────────┴────────────────┴─────────────┴───────┴─────────┴─────────┴─────────┴──────────┴─────────────────────┴────────┘"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "select *\n",
+    "from read_csv_auto('~/concept2/workouts/*summary*.csv')\n",
+    "where 1=1\n",
+    "    and date >= '2026-01-19'\n",
+    "    and Type = 'RowErg'\n",
+    "limit 5\n",
+    "\"\"\"\n",
+    "cn.sql(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "df78ca7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌────────────────────────────┬────────────────────────────┐\n",
+       "│ c2_cube__workout_date_year │ c2_cube__total_distance_km │\n",
+       "│            date            │           double           │\n",
+       "├────────────────────────────┼────────────────────────────┤\n",
+       "│ 2024-01-01                 │                     594.99 │\n",
+       "│ 2025-01-01                 │                     961.27 │\n",
+       "│ 2026-01-01                 │                      73.63 │\n",
+       "└────────────────────────────┴────────────────────────────┘"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "SELECT\n",
+    "  DATE_TRUNC('year', timezone('UTC', \"Date\" :: timestamptz)) \"c2_cube__workout_date_year\",\n",
+    "  ROUND(sum(\"Work Distance\") / 1000.0, 2) \"c2_cube__total_distance_km\"\n",
+    "FROM\n",
+    "  (\n",
+    "    SELECT\n",
+    "      *\n",
+    "    FROM\n",
+    "      read_csv_auto('~/concept2/workouts/*summary*.csv')\n",
+    "  ) AS \"c2_cube\"\n",
+    "GROUP BY\n",
+    "  1\n",
+    "ORDER BY\n",
+    "  1 ASC\n",
+    "LIMIT\n",
+    "  10000\n",
+    "\"\"\"\n",
     "cn.sql(sql)"
    ]
   }
